--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ install:
 - pip install codecov
 script:
 - coverage run setup.py test
-after_success:n
+after_success:
 - codecov
 deploy:
   provider: pypi
