--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,8 @@ python:
 - '2.7'
 - '3.6'
 - '3.7'
+before_install:
+  sudo apt-get install -y gfortran
 install:
 - pip install .
 - pip install codecov
