--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,11 @@ python:
 - '2.7'
 - '3.6'
 - '3.7'
+env:
+  CUDA=9.2
 before_install:
   sudo apt-get install -y gfortran
+  sudo bash travisci/install-cuda-trusty.sh
 install:
 - pip install .
 - pip install codecov
