Fix syntax in before_install

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,8 +6,8 @@ python:
 env:
   CUDA=9.2
 before_install:
-  sudo apt-get install -y gfortran
-  sudo bash travisci/install-cuda-trusty.sh
+  - sudo apt-get install -y gfortran
+  - sudo bash travisci/install-cuda-trusty.sh
 install:
 - pip install .
 - pip install codecov
