Add lcuda installation to Travis environment

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,10 @@ python:
 - '3.7'
 before_install:
   - sudo apt-get install -y gfortran
+  - echo "deb http://developer.download.nvidia.com/compute/cuda/repos/ubuntu1404/x86_64/ /" | sudo tee -a /etc/apt/sources.list.d/cuda.list
+  - sudo apt-key adv --fetch-keys http://developer.download.nvidia.com/compute/cuda/repos/ubuntu1404/x86_64/7fa2af80.pub
+  - sudo apt-get update -q
+  - sudo apt-get install -y --no-install-recommends cuda-drivers=396.44-1 libcuda1-396  
   - travis_retry wget --progress=dot:mega https://developer.nvidia.com/compute/cuda/9.2/Prod2/local_installers/cuda_9.2.148_396.37_linux
   - chmod +x cuda_*_linux
   - sudo ./cuda_*_linux --silent --toolkit
