Remove explicit dependency on CUDA for gfortran builds

--- a/config.gnu.json
+++ b/config.gnu.json
@@ -18,5 +18,5 @@
 		  "-pedantic",
 		  "-Wl,--no-as-needed"]
     },
-    "libraries": ["stdc++", "cuda", "cudart", "gomp", "pthread", "m", "dl"]
+    "libraries": ["stdc++", "gomp", "pthread", "m", "dl", "gfortran"]
 }
