Add dynamic settings of -Mcuda parameter

--- a/config.pgi.json
+++ b/config.pgi.json
@@ -17,7 +17,7 @@
 		  "-Minform=inform"]
     },
     "libraries": ["stdc++", "gomp", "pthread", "m", "dl"],
-    "link_args": ["-Mcuda"]
+    "link_args": []
 }
 	
 	    
