Fix link from which thrust is being downloaded (the previous one was broken)

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ matrix:
 install:
 - docker pull $DOCKER_IMAGE
 script:
-- wget https://github.com/thrust/thrust/releases/download/1.8.1/thrust-1.8.1.zip
+- wget https://github.com/thrust/thrust/archive/1.8.1.zip
 - unzip thrust-1.8.1.zip
 - docker run --rm -v `pwd`:/ising $DOCKER_IMAGE $PRE_CMD /ising/travisci/build-wheels.sh
 - ls wheelhouse/
