Move inner thrust directory one level up

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,7 @@ install:
 script:
 - wget https://github.com/thrust/thrust/archive/1.8.1.zip
 - unzip 1.8.1.zip
+- mv thrust-1.8.1/thrust ./thrust
 - docker run --rm -v `pwd`:/ising $DOCKER_IMAGE $PRE_CMD /ising/travisci/build-wheels.sh
 - ls wheelhouse/
 - echo $TWINE_PASSWORD
